--- a/app/templates/_comments.html
+++ b/app/templates/_comments.html
@@ -1,6 +1,12 @@
 <ul class="comments">
     {% for comment in comments %}
     <li class="comment">
+        <div>
+            <a href="{{url_for('.user',username=comment.author.username)}}">
+                <img class="img-rounded comment-thumbnail" 
+                src="{{url_for('static',filename=comment.author.avatar)}}">
+            </a>
+        </div>
         <div class="comment-content">
             <div class="comment-date">{{ moment(comment.timestamp).fromNow() }}</div>
             <div class="comment-author"><a href="{{ url_for('.user', username=comment.author.username) }}">{{ comment.author.username }}</a></div>
