--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -1,6 +1,12 @@
 <ul class="posts">
     {% for post in posts %}
     <li class="post">
+        <div>
+            <a href="{{url_for('.user',username=post.author.username)}}">
+                <img class="img-rounded post-thumbnail" 
+                src="{{url_for('static',filename=post.author.avatar)}}">
+            </a>
+        </div>
         <div class="post-content">
             <div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>
             <div class="post-author">
